# jira-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  taxonomy.yaml
evals/: reference_questions.yaml  runner.py
evals/results/: ask_phase1.json  ask_phase1_deterministic.json  ask_phase3a.json  ask_phase3a_top20.json  ask_phase3b.json  ask_phase3b_hybrid.json  ask_phase3b_hybrid_smart.json  baseline_search.json
integrations/: shared.env.example
integrations/jira_rag_client/: README.md  pyproject.toml
integrations/jira_rag_client/src/jira_rag_client/: __init__.py  client.py  formatters.py
integrations/mirelia_agent/: Dockerfile.example  docker-compose.example.yml  fix_existing_snippet.py  main_patch.diff
migrations/: 001_initial.sql  002_add_smart_checklist.sql  003_feature_tags.sql
scripts/: init_qdrant.py  jira-rag-sync.service  jira-rag-sync.timer  jira-rag.service  migrate.py  propose_taxonomy.py  run_sync.sh  tag_features.py
src/jira_rag/: __init__.py  __main__.py  cli.py
src/jira_rag/config/: __init__.py  loader.py  schema.py
src/jira_rag/database/: __init__.py  client.py  repositories.py
src/jira_rag/indexer/: __init__.py  sync.py
src/jira_rag/jira_client/: __init__.py  client.py  mappers.py
src/jira_rag/search/: __init__.py  searcher.py
src/jira_rag/synthesis/: __init__.py  context_packing.py  feature_classifier.py  prompts.py  query_intent.py  service.py
src/jira_rag/utils/: logging.py  text.py
src/jira_rag/vectordb/: __init__.py  client.py  collections.py  embeddings.py
src/jira_rag/webhook/: __init__.py  router.py
