[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jira-rag-client"
version = "0.1.0"
description = "Thin HTTP client for the jira-rag service — semantic search + issue hydration for agents."
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["jira", "rag", "semantic-search", "llm", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# Zero runtime dependencies — stdlib only. Deliberate choice so this package
# is safe to drop into any agent environment without resolver pain.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Source = "https://github.com/halyavka/jira-rag/tree/main/integrations/jira_rag_client"
Issues = "https://github.com/halyavka/jira-rag/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/jira_rag_client"]
